syntax = "proto3";
package tm;

option go_package = "github.com/gnolang/gno/pkgs/bft/blockchain/pb";

// imports
import "github.com/gnolang/gno/pkgs/bft/types/types.proto";
import "github.com/gnolang/gno/pkgs/bft/abci/types/abci.proto";
import "github.com/gnolang/gno/pkgs/crypto/merkle/merkle.proto";
import "github.com/gnolang/gno/pkgs/bitarray/bitarray.proto";

// messages
message BlockRequest {
	sint64 Height = 1;
}

message BlockResponse {
	Block Block = 1;
}

message NoBlockResponse {
	sint64 Height = 1;
}

message StatusRequest {
	sint64 Height = 1;
}

message StatusResponse {
	sint64 Height = 1;
}